--- a/3/index.html
+++ b/3/index.html
@@ -29,7 +29,7 @@
                         <li class="nav-item"><a class="nav-link" href="#story" style="color: rgb(255, 5, 159);">OUR STORY ❤︎</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects" style="color: rgb(255, 5, 159);">Happy Valentine's Day!</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team" style="color: rgb(255, 5, 159);">MC</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://geriqiel.github.io/forqiel/" style="color: rgb(255, 5, 159);">Back to main page.</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://geriqiel.github.io/forQiel/" style="color: rgb(255, 5, 159);">Back to main page.</a></li>
                     </ul>
                 </div>
             </div>
